--- a/package.json
+++ b/package.json
@@ -1,39 +1,27 @@
 {
-    "name": "boilerplate-nextjs-typescript",
-    "version": "1.0.0",
-    "scripts": {
-        "dev": "next",
-        "build": "next build",
-        "start": "next start",
-        "export": "next export",
-        "pretty": "prettier --write \"{pages,types}/**/*.{ts,tsx}\"",
-        "lint": "tslint --project tsconfig.json",
-        "deploy": "rm -rf node_modules/.cache && next build && next export && touch out/.nojekyll && git add out/ && git commit -m \"Deploy Next.js to gh-pages\" && git subtree push --prefix out origin gh-pages"
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "yarn run lint && yarn pretty"
-        }
-    },
-    "main": "index.js",
-    "repository": "git@github.com:avaneeshtripathi/boilerplate-nextjs-typescript.git",
-    "author": "Avaneesh Tripathi <avaneeshtripathi93@gmail.com>",
-    "license": "MIT",
-    "dependencies": {
-        "next": "^9.3.2",
-        "react": "^16.12.0",
-        "react-dom": "^16.12.0"
-    },
-    "devDependencies": {
-        "@types/node": "^13.7.0",
-        "@types/react": "^16.9.19",
-        "husky": "^4.2.1",
-        "prettier": "^1.19.1",
-        "tslint": "^6.0.0",
-        "tslint-config-prettier": "^1.18.0",
-        "tslint-config-standard": "^9.0.0",
-        "tslint-etc": "^1.10.0",
-        "tslint-react": "^4.2.0",
-        "typescript": "^3.7.5"
-    }
+  "name": "boilerplate-nextjs-typescript",
+  "version": "1.0.0",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "export": "next export",
+    "pretty": "prettier --write --ignore-unknown",
+    "deploy": "rm -rf node_modules/.cache && next build && next export && touch out/.nojekyll && git add out/ && git commit -m \"chore: deploy to gh-pages\" && git subtree push --prefix out origin gh-pages"
+  },
+  "main": "index.js",
+  "repository": "git@github.com:avaneeshtripathi/boilerplate-nextjs-typescript.git",
+  "author": "Avaneesh Tripathi <avaneeshtripathi93@gmail.com>",
+  "license": "MIT",
+  "dependencies": {
+    "next": "10.0.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.5",
+    "@types/react": "^16.9.54",
+    "prettier": "^2.1.2",
+    "typescript": "^4.0.5"
+  }
 }
