--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "boilerplate-nextjs-typescript",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "export": "next export",
     "pretty": "prettier --write --ignore-unknown",
-    "deploy": "rm -rf node_modules/.cache && next build && next export && touch out/.nojekyll && git add out/ && git commit -m \"chore: deploy to gh-pages\" && git subtree push --prefix out origin gh-pages"
+    "deploy": "rm -rf node_modules/.cache && next build && next export && touch out/.nojekyll && git add out/ && git commit -m \"chore: deploy to gh-pages\" && git subtree push --prefix out origin gh-pages && rm -rf out && git add . && git commit -m \"chore: push updates to master\" && git push origin master"
   },
   "main": "index.js",
   "repository": "git@github.com:avaneeshtripathi/boilerplate-nextjs-typescript.git",
